# virust-tcs

./: .gitignore  Cargo.toml  README.md  comman_list.md
log_helper/: README.md  lib_data.rs  log.css  log.js  log_template.html
resources/dr_presets/: v1.json  v2.json  v3.json  v4.json
resources/drm_config/: drm_versions_config.json
resources/quarto/: index.qmd
resources/r_scripts/: check_env.r
src/: cli.rs  config.rs  lib.rs  main.rs  params_generator.rs  tcs.rs
src/helper/: consensus.rs  end_joining.rs  fastqc.rs  io.rs  json.rs  mod.rs  muscle.rs  params.rs  r.rs  runner.rs  umi.rs  umis.rs
src/helper/drm_helper/: drm_list.rs  drm_region_config.rs  drm_version.rs  mod.rs
src/helper/tcs_helper/: error.rs  fastq_files.rs  filter_r1_r2.rs  mod.rs  tcs_consensus.rs  tcs_output.rs  tcs_qc.rs  tcs_report.rs  tcs_summary.rs  utils.rs
src/pipelines/: log.rs  mod.rs  params_generator.rs  sdrm.rs  tcs.rs  tick.rs
src/utils/: consensus.rs  io.rs  mod.rs  params.rs  tcs_helper.rs  umi.rs  umis.rs
tests/: tcs_report.json
tests/data/: dr_v1.json  pr.json  test_params.json
tests/data/alignment/: sequence.aligned.fasta  sequence.fasta
tests/data/test_fastqc/: sample.csv  sample.fastq  sample.json
