[package]
name = "virust-tcs"
version = "0.1.0"
edition = "2024"

[dependencies]
bio = "2.3.0"
virust-locator = "0.1.4"
rayon = "1.11.0"
clap = { version = "4.5.47", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.145"
regex = "1.11.2"
rand = "0.9.2"
rand_chacha = "0.9"
itertools = "0.14"
flate2 = "1.1.2"
chrono = { version = "0.4.42", features = ["serde"] }
thiserror = "2.0"
once_cell = "1.21"
getset = "0.1.6"
csv = "1.3.1"
indicatif = "0.18"
statrs = "0.18"
plotters = "0.3.7"

[[bin]]
name = "tcs"
path = "src/main.rs"
